--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('images/background.jpg'); /* Замінити на свою картинку */
+            background-image: url('images/d.png'); /* Замінити на свою картинку */
             background-size: cover;
             background-position: center;
         }
