--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-image: url('images/d.png'); /* Замінити на свою картинку */
+            background-image: url('images/d.png'); /* Твій шлях */
             background-size: cover;
             background-position: center;
+            background-repeat: no-repeat;
         }
         .container {
             max-width: 960px;
