--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Блок для зображення, імені, тексту та контактів -->
     <div class="info-block">
-        <img src="images/me.jpg" alt="Моє фото" class="info-photo">
+        <img src="images/Me.jpg" alt="Моє фото" class="info-photo">
         <h2>Max Havaza</h2>
         <p>Game Dev</p>
         <p>Programmer</p>
