--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Portfolio</title>
 </head>
 <body>
+
 <div class="main">
+    <div class="thin-stripe"></div>
+    <div class="thin-stripe2"></div>
     <div class="content">
         <img src="images/Back.png" alt="Background Image">
     </div>
@@ -20,8 +23,8 @@
         <p>Programmer</p>
         <p>Game Design</p>
         <div class="contacts">
-            <a href="myltimaxplayer@gmail.com">Email: myltimaxplayer@gmail.com</a>
-            <a href="tel:+380XXXXXXXXX">Telegram: myltiy</a>
+           <p>Email: myltimaxplayer@gmail.com</p>
+            <a href="https://t.me/myltiy">Telegram: myltiy</a>
             <a href="https://www.instagram.com/brokeylti/?hl=en>">Instagram: brokeylti</a>
         </div>
     </div>
@@ -29,13 +32,22 @@
     <div class="Knowledge-block">
         <div class="highlighted-line">Education</div>
         <ul class="contacts">
-           <li> <a href="images/Course.pdf" target="_blank">2019-2021 Game Dev Course</a> </li>
+            <li><a href="images/Course.pdf" target="_blank">2019-2021 Game Dev Course(Click)</a></li>
         </ul>
         <ul class="info-list">
             <li>2023-2025 Technical University in Košice, FEI, Informatics (Slovakia), still studying for a bachelor's degree</li>
-            <li>2021-2023 Admiral Makarov College,Computer Science(Ukraine)</li>
+            <li>2021-2023 Admiral Makarov College, Computer Science (Ukraine)</li>
         </ul>
-
+    </div>
+    <div class="Skills-block">
+        <div class="highlighted-line">Skills</div>
+        <p>-Programming languages:C#, C, C++, java</p>
+        <p>-Knowledge of SQL</p>
+        <p>-Game design</p>
+        <p>-Pixel art</p>
+        <p>-Sound design</p>
+        <p>&nbsp;</p>
+        <p>Unity(Game engine),Aseprite(Pixel art),Ableton(Music, sound),Blender(3D modeling,animation),Substance Painter(Texturing)</p>
     </div>
 </div>
 
