--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div class="content">
         <img src="images/Back.png" alt="Background Image">
     </div>
+    <div class="ff">
+        <img src="images/2.png" alt="">
+    </div>
 
     <!-- Блок для зображення, імені, тексту та контактів -->
     <div class="info-block">
