--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="uk" xmlns:https="http://www.w3.org/1999/xhtml">
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -9,6 +8,7 @@
 <body>
 
 <div class="main">
+    <img src="images/Gameplay1.gif" alt="Gif" class="my-gif">
     <div class="thin-stripe"></div>
     <div class="thin-stripe2"></div>
     <div class="content">
@@ -55,4 +55,4 @@
 </div>
 
 </body>
-</html>
+
