--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Portfolio</title>
 </head>
 <body>
-
+<nav class="top-nav">
+    <a href="index.html">Home</a>
+    <a href="programming.html">Programming</a>
+    <a href="games.html">Games</a>
+</nav>
 <div class="main">
     <img src="images/Gameplay1.gif" alt="Gif" class="my-gif">
     <div class="thin-stripe"></div>
