--- a/games.html
+++ b/games.html
@@ -14,10 +14,19 @@
 
 <div class="mainGames">
     <h1>Game Projects</h1>
-    <img src="images/hyperCasual1.gif" alt="Gameplay GIF" class="gif-preview">
+    <p style="max-width: 90%; word-wrap: break-word; margin: 0 auto; line-height: 1.5;">
+        <strong>Game jam game made in 2 days</strong><br>
+        A game where you have to press the space bar in time to build a building to the sky.<br>
+        (The emphasis here is more on sounds and visuals than mechanics)
+    </p>
+    <div class="gif-row">
+        <img src="images/2dPixelMenu.gif" alt="Menu GIF" class="gif-Menu">
+        <img src="images/2dPixelGameplay.gif" alt="Gameplay GIF" class="gif-Gameplay">
+    </div>
     <ul class="info-listGames">
         <p><strong>An arcade game made on a game jam</strong> –  Еhe goal of which is to throw gifts down the chimneys of houses</p>
     </ul>
+    <img src="images/hyperCasual1.gif" alt="Gameplay GIF" class="gif-preview">
 </div>
 </body>
 </html>
