--- a/games.html
+++ b/games.html
@@ -23,10 +23,10 @@
         <img src="images/2dPixelMenu.gif" alt="Menu GIF" class="gif-Menu">
         <img src="images/2dPixelGameplay.gif" alt="Gameplay GIF" class="gif-Gameplay">
     </div>
-    <ul class="info-listGames">
-        <p><strong>An arcade game made on a game jam</strong> –  Еhe goal of which is to throw gifts down the chimneys of houses</p>
-    </ul>
-    <img src="images/hyperCasual1.gif" alt="Gameplay GIF" class="gif-preview">
+    <div class="info-listGames">
+    <p><strong>An arcade game made on a game jam</strong> – The goal of which is to throw gifts down the chimneys of houses</p>
+</div>
+<img src="images/hyperCasual1.gif" alt="Gameplay GIF" class="gif-preview">
 </div>
 </body>
 </html>
