--- a/games.html
+++ b/games.html
@@ -19,6 +19,7 @@
         A game where you have to press the space bar in time to build a building to the sky.<br>
         (The emphasis here is more on sounds and visuals than mechanics)
     </p>
+    <a href="https://mylti.itch.io/pixel">Ithc.io</a>
     <div class="gif-row">
         <img src="images/2dPixelMenu.gif" alt="Menu GIF" class="gif-Menu">
         <img src="images/2dPixelGameplay.gif" alt="Gameplay GIF" class="gif-Gameplay">
