--- a/programming.html
+++ b/programming.html
@@ -12,11 +12,24 @@
     <a href="games.html">Games</a>
 </nav>
 
-<div class="main">
-    <h1>Programming Projects</h1>
-    <ul class="info-list">
-
-    </ul>
+<div class="mainProgramming">
+    <p style="max-width: 90%; word-wrap: break-word; margin: 0 auto; line-height:2;">
+        <strong> The game is entirely about OOP-</strong><br>
+       a fairly large number of objects with different properties.
+    </p>
+    <img src="images/Ellen.gif" alt="Gameplay GIF" class="gif-preview"><br><br>
+    <strong>Here is the most important player movement script-</strong><br>
+    <p>and other equally important scripts where OOP is used</p><br>
+    <a href="https://git.kpi.fei.tuke.sk/oop-labs/assignments-2024/km/project-ellen-9276">GitLab Project</a><br>
+    <div class="image-gallery">
+        <img src="images/ScriptProg.png" alt="Image 1">
+        <img src="images/InterfaceObjProg.png" alt="Image 2">
+        <img src="images/InterfaceProg.png" alt="Image 3">
+    </div>
+    <br><br>
+    <strong>Also, of course, I have skills in writing various structures and algorithms in C++.</strong><br>
+    <p>In this particular case, the program simultaneously calculates the Fibonacci number and which coins should be used to exchange money</p><br>
+     <img src="images/C++.gif" alt="Gameplay GIF" class="gif-preview">
 </div>
 </body>
 </html>
