--- a/programming.html
+++ b/programming.html
@@ -17,7 +17,7 @@
         <strong> The game is entirely about OOP-</strong><br>
        a fairly large number of objects with different properties.
     </p>
-    <img src="images/Ellen.gif" alt="Gameplay GIF" class="gif-preview"><br><br>
+    <img src="images/Ellen.gif" alt="Gameplay GIF" ><br><br>
     <strong>Here is the most important player movement script-</strong><br>
     <p>and other equally important scripts where OOP is used</p><br>
     <a href="https://git.kpi.fei.tuke.sk/oop-labs/assignments-2024/km/project-ellen-9276">GitLab  Project</a><br>
@@ -29,7 +29,7 @@
     <br><br>
     <strong>Also, of course, I have skills in writing various structures and algorithms in C++.</strong><br>
     <p>In this particular case, the program simultaneously calculates the Fibonacci number and which coins should be used to exchange money</p><br>
-     <img src="images/C++.gif" alt="Gameplay GIF" class="gif-preview">
+     <img src="images/C++.gif" alt="Gameplay GIF" >
 </div>
 </body>
 </html>
