--- a/games.html
+++ b/games.html
@@ -14,6 +14,7 @@
 
 <div class="mainGames">
     <h1>Game Projects</h1>
+    <img src="images/Vr.gif" alt="Menu GIF" class="gif-Menu">
     <p style="max-width: 90%; word-wrap: break-word; margin: 0 auto; line-height: 1.5;">
         <strong>Game jam game made in 2 days</strong><br>
         A game where you have to press the space bar in time to build a building to the sky.<br>
